--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -46,6 +46,8 @@
 							</tr>
 						<% end %>
 					</table>
+      	<% else %>
+      		<span class="normal-text">Games for this season are yet to be scheduled.</span>
       	<% end %>
       </div>
     </div>
