--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -61,9 +61,12 @@ table {
 ul {
 	list-style: none;
 }
+#header-row {
+	margin: 0px 0px 30px 0px;
+}
 #main-nav {
 	font-size: 23px;
-	text-align: center;
+	text-align: right;
 }
 .alert {
 	box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.14), 0 5px 3px -2px rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.12);
@@ -98,8 +101,8 @@ ul {
 	padding: 10px;
 }
 .collection_radio_buttons > input[type="radio"]:checked + label {
-    border: 2px solid #888;
-    border-radius: 40px;
+    border: 1px solid #888;
+    font-weight: 500;
 }
 .collection_radio_buttons > input[type="radio"] {
 	display: none;
@@ -111,6 +114,12 @@ ul {
 .demo-card-wide.mdl-card {
   margin: 0px 0px 30px 0px;
   width: 100%;
+}
+.hidden_div {
+	display: none;
+}
+.show_div {
+	display: block;
 }
 .horizontal-style {
   display: table;
@@ -130,7 +139,7 @@ ul {
 	margin: 20px 0px;
 }
 .logo-icon {
-	width: 100%;
+	width: 60%;
 }
 .material-icons.error {
 	color: #ff6e40;
