--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,15 @@
 	</head>
 	<body id="body_id">
 		<div class="container">
-			<div class="row">
+			<div id="header-row" class="row">
 				<div class="col-sm-3">
-					<%= link_to image_tag("gaffer_logo_263_x_328.png", class: "logo-icon"), root_path %>
+					<%= image_tag("gaffer_logo_263_x_328.png", class: "logo-icon")%>
 				</div>
 				<% if logged_in? %>
 					<div id="main-nav" class="col-sm-9">
 						<div class="row">
-							<div class="col-sm-4 main-nav-item"><%= link_to "Home", root_path %></div>
-							<div class="col-sm-4 main-nav-item"><%= link_to "Leagues", leagues_path %></div>
-				    	<div class="col-sm-4 main-nav-item"><%= link_to "Log out", logout_path, method: :delete %></div>
+							<div class="col-sm-6 main-nav-item"><%= link_to "Your leagues", leagues_path %></div>
+				    	<div class="col-sm-6 main-nav-item"><%= link_to "Log out", logout_path, method: :delete %></div>
 				  	</div>
 			  	</div>
 		    <% else %>
