--- a/app/views/team_players/show.html.erb
+++ b/app/views/team_players/show.html.erb
@@ -1,30 +1,95 @@
-<p id="notice"><%= notice %></p>
-
-<span class="main_header">
-	<%= link_to @team.league.name, league_path(@team.league) %> >> 
-	<%= link_to @team.title, league_team_path(@team.league, @team) %> >>
-	<%= @team_player.player.full_name %>
-</span>
-<table>
-	<thead>
-		<tr>
-			<td>Season</td>
-			<td>Game week #</td>
-			<td>Minutes played</td>
-			<td>Goals scored</td>
-			<td>Clean sheet while on pitch</td>
-		</tr>
-	</thead>
-	<tbody>
-
-		<% @team_player.player.player_game_weeks.joins(game_week: :season).where("season_id = ?", Season.current.first.id).order("game_weeks.starts_at DESC").each do |pgw| %>
-		<tr>
-			<td><%= pgw.game_week.season.description %></td>
-			<td><%= pgw.game_week.game_week_number %></td>
-			<td><%= pgw.minutes_played %></td>
-			<td><%= pgw.goals %></td>
-			<td><%= pgw.clean_sheet %></td>
-		</tr>
-		<% end %>
-	</tbody>
-</table>
+<div class="row">
+	<div class="col-sm-12">
+		<div class="demo-card-wide mdl-card mdl-shadow--2dp">
+			<div class="mdl-card__title">
+        <h2 class="mdl-card__title-text"><%= @team_player.player.full_name %></h2>
+      </div>
+			<div class="mdl-card__actions">
+				<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+					<tr>
+						<td class="mdl-data-table__cell--non-numeric normal-text">
+							Position
+						</td>
+						<td class="mdl-data-table__cell--non-numeric normal-text">
+							<%= @team_player.player.playing_position %>
+						</td>
+					</tr>
+					<tr>
+						<td class="mdl-data-table__cell--non-numeric normal-text">
+							First team
+						</td>
+						<td class="mdl-data-table__cell--non-numeric normal-text">
+							<%= @team_player.first_team ? 'Yes' : 'No' %>
+						</td>
+					</tr>
+					<tr>
+						<td class="mdl-data-table__cell--non-numeric normal-text">
+							Team
+						</td>
+						<td class="mdl-data-table__cell--non-numeric normal-text">
+							<%= link_to @team_player.team.title, league_team_path(@team.league, @team), class: "content-link" %>
+						</td>
+					</tr>
+					<tr>
+						<td class="mdl-data-table__cell--non-numeric normal-text">
+							Salary
+						</td>
+						<td class="mdl-data-table__cell--non-numeric normal-text">
+							<%= number_to_currency(@team_player.current_contract.weekly_salary_cents, precision: 0) %>
+						</td>
+					</tr>
+					<tr>
+						<td class="mdl-data-table__cell--non-numeric normal-text">
+							Contract term
+						</td>
+						<td class="mdl-data-table__cell--non-numeric normal-text">
+							<%= @team_player.current_contract.starts_at.strftime("%d %b %y") %> - <%= @team_player.current_contract.ends_at.strftime("%d %b %y") %>
+						</td>
+					</tr>
+				</table>
+			</div>
+			<% if @team_player.player.player_game_weeks.joins(game_week: :season).where("season_id = ?", Season.current.first.id).count > 0 %>
+				<div class="mdl-card__actions">
+					<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+						<tr>
+							<th class="mdl-data-table__cell--non-numeric">
+								<span>Sn</span>
+							</th>
+							<th>
+								<span>GW</span>
+							</th>
+							<th>
+								<span>MP</span>
+							</th>
+							<th>
+								<span>G</span>
+							</th>
+							<th>
+								<span>CS</span>
+							</th>
+						</tr>
+						<% @team_player.player.player_game_weeks.joins(game_week: :season).where("season_id = ?", Season.current.first.id).order("game_weeks.starts_at DESC").each do |pgw| %>
+							<tr>
+								<td class="mdl-data-table__cell--non-numeric normal-text">
+									<%= pgw.game_week.season.description %>
+								</td>
+								<td class="normal-text">
+									<%= pgw.game_week.game_week_number %>
+								</td>\
+								<td class="normal-text">
+									<%= pgw.minutes_played %>
+								</td>
+								<td class="normal-text">
+									<%= pgw.goals %>
+								</td>
+								<td class="normal-text">
+									<%= pgw.clean_sheet %>
+								</td>
+							</tr>
+						<% end %>
+					</table>
+				</div>
+			<% end %>
+		</div>
+	</div>
+</div>
