--- a/app/views/transfer_items/edit.html.erb
+++ b/app/views/transfer_items/edit.html.erb
@@ -1,5 +1,8 @@
-<p id="notice"><%= notice %></p>
-
-<span class="main_header">Edit transfer item</span>
-
-<%= render 'form' %>
+<div class="col-sm-12">
+  <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+		<div class="mdl-card__title">
+			<h2 class="mdl-card__title-text">Edit transfer item</h2>
+		</div>
+			<%= render 'form' %>
+	</div>
+</div>
