--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -35,6 +35,8 @@
 			<div class="mdl-card__supporting-text">
 				<ul class="horizontal-style">
 					<li><%= link_to 'Edit team', edit_league_team_path(@team.league, @team), class: "mdl-button--primary" %></li>
+					<li><%= link_to 'Transfers', league_transfers_path(@team.league), class: "mdl-button--primary" %></li>
+					<li><%= link_to 'Free agents', league_contracts_path(@team.league), class: "mdl-button--primary" %></li>
 				</ul>
 			</div>
 		</div>
