--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -90,6 +90,7 @@ ul {
   width: 37%;
 }
 .collection_radio_buttons {
+	margin: 15px 0px;
 	width: 100%;
 }
 .collection_radio_buttons > label {
@@ -99,6 +100,11 @@ ul {
 	line-height: 46px;
 	margin: 0px 30px 0px 10px;
 	padding: 10px;
+}
+.collection_radio_buttons label[for^="position_dropdown_"] {
+	margin: 10px 0;
+	text-align: center;
+	width: 13%;
 }
 .collection_radio_buttons > input[type="radio"]:checked + label {
     border: 1px solid #888;
