--- a/app/views/contracts/_form.html.erb
+++ b/app/views/contracts/_form.html.erb
@@ -19,10 +19,25 @@
 
   <div class="mdl-card__actions">
     <% if !@contract.id %>
+    <%= f.label "Choose player", class: "non-floating-label" %>
+    <div class="collection_radio_buttons">
+      <form id="position_dropdown_form">
+        <input id="position_dropdown_all" type="radio" name="player_position_dropdown" value="All" checked>
+        <label for="position_dropdown_all">All</label>
+        <input id="position_dropdown_goalkeeper" type="radio" name="player_position_dropdown" value="GK">
+        <label for="position_dropdown_goalkeeper">GK</label>
+        <input id="position_dropdown_defender" type="radio" name="player_position_dropdown" value="DF">
+        <label for="position_dropdown_defender">DF</label>
+        <input id="position_dropdown_midfielder" type="radio" name="player_position_dropdown" value="MD">
+        <label for="position_dropdown_midfielder">MD</label>
+        <input id="position_dropdown_forward" type="radio" name="player_position_dropdown" value="FW">
+        <label for="position_dropdown_forward">FW</label>
+      </form>
+    </div>
       <div class="form-group">
         <div class="selectdiv">
           <% @players_to_exlcude = Player.joins(team_players: [:team => :league]).where('leagues.id = ?', league.id) | Player.joins(:contracts).where('contracts.team_id = ?', team.id) %>
-          <%= f.collection_select(:player_id, Player.where.not(id:@players_to_exlcude.map(&:id)).sort_by {|p| [p.sort_val, p.last_name.downcase, p.first_name.downcase] }, :id, "#{:full_name_and_playing_position}") %>
+          <%= f.collection_select(:player_id, Player.where.not(id:@players_to_exlcude.map(&:id)).sort_by {|p| [p.sort_val, p.last_name.downcase, p.first_name.downcase] }, :id, "#{:full_name_and_playing_position}", {include_blank: "Choose player..."}) %>
         </div>
       </div>
     <% end %>
