--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,7 +16,7 @@ a.mdl-button {
 	padding-top: 16px;
 	width: 45%;
 }
-body#body_id {
+body#body_id {	
 	font-family: "Roboto";
 }
 div.mdl-card__actions {
@@ -63,6 +63,9 @@ ul {
 }
 #header-row {
 	margin: 0px 0px 30px 0px;
+}
+#player_position_dropdown {
+	cursor: pointer;
 }
 #main-nav {
 	font-size: 23px;
