--- a/app/views/contracts/_form.html.erb
+++ b/app/views/contracts/_form.html.erb
@@ -20,7 +20,7 @@
   <div class="mdl-card__actions">
     <% if !@contract.id %>
     <%= f.label "Choose player", class: "non-floating-label" %>
-    <div class="collection_radio_buttons">
+    <!-- <div class="collection_radio_buttons">
       <form id="position_dropdown_form">
         <input id="position_dropdown_all" type="radio" name="player_position_dropdown" value="All" checked>
         <label for="position_dropdown_all">All</label>
@@ -33,7 +33,7 @@
         <input id="position_dropdown_forward" type="radio" name="player_position_dropdown" value="FW">
         <label for="position_dropdown_forward">FW</label>
       </form>
-    </div>
+    </div> -->
       <div class="form-group">
         <div class="selectdiv">
           <% @players_to_exlcude = Player.joins(team_players: [:team => :league]).where('leagues.id = ?', league.id) | Player.joins(:contracts).where('contracts.team_id = ?', team.id) %>
